--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.google.dagger:dagger-android:2.16'
+    compile 'com.google.dagger:dagger-android-support:2.16'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
     testCompile 'junit:junit:4.12'
     compile 'com.journeyapps:zxing-android-embedded:3.4.0'
     compile 'com.android.support:appcompat-v7:26.1.0'   // Version 23+ is required
-    compile 'com.github.barteksc:android-pdf-viewer:2.3.0'
+
 }
