--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "io.github.keyfour13.barcodescannerdemo"
         minSdkVersion 15
@@ -20,16 +20,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.google.dagger:dagger-android:2.16'
-    compile 'com.google.dagger:dagger-android-support:2.16'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.google.dagger:dagger-android:2.16'
+    implementation 'com.google.dagger:dagger-android-support:2.16'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
-    testCompile 'junit:junit:4.12'
-    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'   // Version 23+ is required
+    implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    testImplementation 'junit:junit:4.12'
 
 }
